--- a/TestKDSwiftUtilities/Base.lproj/Main.storyboard
+++ b/TestKDSwiftUtilities/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,29 +13,97 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestKDSwiftUtilities" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sM5-jz-KOJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="fn2-68-pCH"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1aq-1v-os6" customClass="UIButtonX" customModule="TestKDSwiftUtilities" customModuleProvider="target">
-                                <rect key="frame" x="87.5" y="309.5" width="200" height="48"/>
-                                <color key="backgroundColor" red="0.82745098039999998" green="0.33725490200000002" blue="0.058823529409999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KNc-ye-zUz">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gTW-QT-IEs">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Upn-jZ-LZX">
+                                                <rect key="frame" x="62.5" y="375.5" width="250" height="116"/>
+                                                <subviews>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RHC-hB-gKR" customClass="UITextFieldX" customModule="TestKDSwiftUtilities" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="250" height="48"/>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="image" keyPath="leftImage" value="ic_call"/>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                                                <real key="value" value="10"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </textField>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wS6-C0-QcY" customClass="UITextFieldX" customModule="TestKDSwiftUtilities" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="68" width="250" height="48"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="250" id="ESn-J1-9Tw"/>
+                                                            <constraint firstAttribute="height" constant="48" id="eK8-ba-jGJ"/>
+                                                        </constraints>
+                                                        <nil key="textColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="image" keyPath="leftImage" value="ic_call"/>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                                                <real key="value" value="10"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </textField>
+                                                </subviews>
+                                            </stackView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1aq-1v-os6">
+                                                <rect key="frame" x="0.0" y="599" width="375" height="48"/>
+                                                <color key="backgroundColor" red="0.82745098039999998" green="0.33725490200000002" blue="0.058823529409999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="48" id="jbb-Iy-g4g"/>
+                                                </constraints>
+                                                <state key="normal" title="Button">
+                                                    <color key="titleColor" red="0.87058823529999996" green="0.92941176469999998" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="Upn-jZ-LZX" firstAttribute="centerY" secondItem="gTW-QT-IEs" secondAttribute="centerY" constant="100" id="07J-hx-oy9"/>
+                                            <constraint firstItem="1aq-1v-os6" firstAttribute="leading" secondItem="gTW-QT-IEs" secondAttribute="leading" id="aam-Ea-dJR"/>
+                                            <constraint firstAttribute="trailing" secondItem="1aq-1v-os6" secondAttribute="trailing" id="f5d-PX-Sy9"/>
+                                            <constraint firstAttribute="bottom" secondItem="1aq-1v-os6" secondAttribute="bottom" constant="20" id="j4O-GC-kDi"/>
+                                            <constraint firstItem="Upn-jZ-LZX" firstAttribute="centerX" secondItem="gTW-QT-IEs" secondAttribute="centerX" id="rdm-zc-D9t"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="hIp-LE-QUh"/>
-                                    <constraint firstAttribute="height" constant="48" id="jbb-Iy-g4g"/>
+                                    <constraint firstAttribute="trailing" secondItem="gTW-QT-IEs" secondAttribute="trailing" id="IWp-KB-WM2"/>
+                                    <constraint firstItem="gTW-QT-IEs" firstAttribute="leading" secondItem="KNc-ye-zUz" secondAttribute="leading" id="N40-w9-arg"/>
+                                    <constraint firstItem="gTW-QT-IEs" firstAttribute="top" secondItem="KNc-ye-zUz" secondAttribute="top" id="gxw-2W-B86"/>
+                                    <constraint firstAttribute="bottom" secondItem="gTW-QT-IEs" secondAttribute="bottom" id="sIQ-1T-0AN"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="popIn" value="YES"/>
-                                </userDefinedRuntimeAttributes>
-                            </button>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="1aq-1v-os6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0tD-eR-jhT"/>
-                            <constraint firstItem="1aq-1v-os6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="FRS-hU-qct"/>
+                            <constraint firstItem="KNc-ye-zUz" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="43v-6w-6jV"/>
+                            <constraint firstItem="gTW-QT-IEs" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" priority="250" id="LiM-pg-fYl"/>
+                            <constraint firstItem="gTW-QT-IEs" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Px4-nq-ym2"/>
+                            <constraint firstItem="KNc-ye-zUz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mni-GF-4F9"/>
+                            <constraint firstAttribute="trailing" secondItem="KNc-ye-zUz" secondAttribute="trailing" id="qgb-bM-NCw"/>
+                            <constraint firstAttribute="bottom" secondItem="KNc-ye-zUz" secondAttribute="bottom" id="r1B-lz-sfP" customClass="KeyboardLayoutConstraint" customModule="TestKDSwiftUtilities" customModuleProvider="target">
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="distanceFromKeyboard">
+                                        <real key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </constraint>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -44,4 +111,7 @@
             <point key="canvasLocation" x="140" y="132.68365817091455"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ic_call" width="18" height="18"/>
+    </resources>
 </document>
